fix inaccuracy