@@ -3,7 +3,6 @@ package ua.kyslun.hw17.task5;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Task5 {
     public static void main(String[] args) {
@@ -16,15 +15,18 @@ public class Task5 {
             boxes.add(box);
         }
 
-        List<Box> filteredBoxes = boxes.stream()
+//         List<Box> filteredBoxes = boxes.stream()
+//                .filter(box -> box.isSuitable(50))
+//                .toList();
+//
+//        List<Item> allItems = filteredBoxes.stream()
+//                .flatMap(box -> box.getItems().stream())
+//                .collect(Collectors.toList());
+        List<Item> allItems = boxes.stream()
                 .filter(box -> box.isSuitable(50))
-                .toList();
-
-        List<Item> allItems = filteredBoxes.stream()
                 .flatMap(box -> box.getItems().stream())
-                .collect(Collectors.toList());
-
-        allItems.sort(Comparator.comparingInt(Item::getCost));
+                .sorted(Comparator.comparingInt(Item::getCost))
+                .toList();
 
         allItems.forEach(item -> System.out.println(item.getCost()));
     }
